cmake_minimum_required(VERSION 3.25)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp main.cpp
        SqList.h
        SqList.cpp
        LinkList.h
        LinkList.h
        LinkList.cpp
        StackSequence.h
        StackSequence.cpp
        " complex.cpp"
        QueueLink.cpp
        QueueLink.h
        QueueLink.h
        DuLinkList.cpp
        DuLinkList.h
        DuLinkList.h
        DuLinkList.cpp
        String.cpp
        String.h
        String.h
)
